--- a/crimeApi/package.json
+++ b/crimeApi/package.json
@@ -13,6 +13,8 @@
     "body-parser": "^1.18.3",
     "express": "^4.16.3",
     "mongodb": "~2.0.33",
-    "mongoose": "^5.2.10"
+    "mongoose": "^5.2.10",
+    "multer": "^1.3.1",
+    "nodemon": "^1.18.4"
   }
 }
