--- a/frontend/package.json
+++ b/frontend/package.json
@@ -36,12 +36,12 @@
     "node-sass": "^4.10.0",
     "postcss-loader": "^3.0.0",
     "sass-loader": "^7.1.0",
-    "webpack": "^3.12.0",
     "webpack-dev-server": "^2.11.3"
   },
   "dependencies": {
     "@material/drawer": "^0.41.1",
     "@material/fab": "^0.43.0",
-    "@material/top-app-bar": "^0.41.0"
+    "@material/top-app-bar": "^0.41.0",
+    "webpack": "^3.12.0"
   }
 }
